@@ -426,7 +426,8 @@ class SchemaDef(object):
         try:
             return self.__tD['ATTRIBUTE_INFO'][attributeId]['ENUMERATION'][str(enum).lower()]
         except Exception as e:
-            logger.error("Failing for %s  %s and %r with %s" % (self.__tD['SCHEMA_NAME'], attributeId, enum, str(e)))
+            #
+            logger.debug("Failing for %s  %s and %r with %s" % (self.__tD['SCHEMA_NAME'], attributeId, enum, str(e)))
         return enum
 
     def isEnumerated(self, attributeId):
